# cs444-compilers

./: .gitignore  .gitlab-ci.yml  ASTDraft.txt  CMakeLists.txt  JavaSpecLALR.txt  Makefile  autoAST.h  dfa.txt  joos.cfg  joos.lr1  joos.txt  joosc  launch.vs.json  lex.txt
docs/: A1.md  A4.md  A5.md
experimental/: JLalr1.java  sample.lr1  temp.cpp  tiger.cfg  tiger_input.txt
experimental/Jlalr1/: Jlalr1.java
make/: jc.txt  joosc.txt
src/: grammar.h  main.cpp  parser.cpp  parser.h  parserAST.h  parserASTBase.cpp  parserASTBase.h  parserASTImpl.cpp  parserAutoAST.cpp  parserAutoAST.h  parserNode.h  platform.cpp  platform.h  scanParse.h  scanner.cpp  scanner.h  temp.cpp  utility.cpp  utility.h  weeder.cpp  weeder.h
src/ast/: arrayAccess.h  arrayCreationExpression.h  assignmentExpression.h  ast.cpp  block.h  classInstanceCreationExpression.h  compilationUnit.h  conditionalStatement.h  constructorDeclaration.h  expression.h  expressionStatement.h  fieldAccess.h  fieldDeclaration.h  forStatement.h  ifThenElseStatement.h  literal.h  localVariableDeclarationStatement.h  memberDeclaration.h  methodDeclaration.h  methodInvocation.h  modifier.h  node.h  primary.h  primitiveType.h  statement.h  this.h  unaryExpression.h
src/pt/: parser.cpp  parserAST.h  parserASTBase.cpp  parserASTBase.h  parserASTImpl.cpp  parserNode.h  (+2 more)
srcJoosC/: astToken.cpp  astToken.h  frontend.cpp  frontend.h  grammar.cpp  grammar.h  main.cpp  middleend.h  platform.cpp  platform.h  profiler.cpp  profiler.h  scanner.cpp  scanner.h  utility.cpp  utility.h  weeder.cpp  weeder.h
srcPTGen/: ptgen.cpp
(+130 files in other folders)
